--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                </div>
             </div>
             <div class="col-12 d-flex justify-content-center main_video">
-                  <video width="700px" muted="muted" autoplay="autoplay"  loop>
+                  <video width="700px" muted="muted" autoplay="autoplay" playsinline loop>
     <source src="./img/Cryptoapp_v1.webm"
             type="video/webm">
     <source src="./img/Cryptoapp_v1.mp4"
