--- a/index.html
+++ b/index.html
@@ -34,14 +34,15 @@
                   
                </div>
             </div>
-            <div class="col-12 d-flex justify-content-center main_video">
+<!--             <div class="col-12 d-flex justify-content-center main_video">
                   <video width="700px" muted="muted" autoplay="autoplay" playsinline loop>
     <source src="./img/Cryptoapp_v1.webm"
             type="video/webm">
     <source src="./img/Cryptoapp_v1.mp4"
             type="video/mp4">
+    <source type="video/ogg" src="video.ogg" />
 </video>
-             </div>
+             </div> -->
          </div>
       </div>
       <div class="fast_block">
@@ -158,9 +159,9 @@
       <div class="second_block">
          <div class="container">
             <div class="row">
-               <div class="col-12 col-lg-6 second_video d-flex justify-content-center">
+<!--                <div class="col-12 col-lg-6 second_video d-flex justify-content-center">
                   <video width="700px" muted="muted" autoplay="autoplay"  loop src="./img/Cryptowallet.mp4"> </video>
-               </div>
+               </div> -->
                <div class="col-12 col-lg-6 promo_text ">
                   <b>Special trading algorithm</b>, taking into account many factors in the course of trading, which allows you to earn automatically with minimal risk.
                </div>
