--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
                   
                </div>
             </div>
-<!--             <div class="col-12 d-flex justify-content-center main_video">
+            <div class="col-12 d-flex justify-content-center main_video">
                   <video width="700px" muted="muted" autoplay="autoplay" playsinline loop>
     <source src="./img/Cryptoapp_v1.webm"
             type="video/webm">
     <source src="./img/Cryptoapp_v1.mp4"
             type="video/mp4">
-    <source type="video/ogg" src="video.ogg" />
+    <source type="video/ogg" src="Cryptoapp_v1.ogg" />
 </video>
-             </div> -->
+             </div>
          </div>
       </div>
       <div class="fast_block">
