--- a/index.html
+++ b/index.html
@@ -159,9 +159,16 @@
       <div class="second_block">
          <div class="container">
             <div class="row">
-<!--                <div class="col-12 col-lg-6 second_video d-flex justify-content-center">
-                  <video width="700px" muted="muted" autoplay="autoplay"  loop src="./img/Cryptowallet.mp4"> </video>
-               </div> -->
+               <div class="col-12 col-lg-6 second_video d-flex justify-content-center">
+<!--                   <video width="700px" muted="muted" autoplay="autoplay"  loop src="./img/Cryptowallet.mp4"> </video> -->
+                  <video width="700px" muted="muted" autoplay="autoplay" playsinline loop>
+                     <!-- <source src="./img/Cryptowallet.webm"
+                             type="video/webm"> -->
+                     <source src="./img/Cryptowallet.mp4"
+                             type="video/mp4">
+                     <source type="video/ogg" src="./img/Cryptowallet.ogg" />
+                 </video>
+               </div>
                <div class="col-12 col-lg-6 promo_text ">
                   <b>Special trading algorithm</b>, taking into account many factors in the course of trading, which allows you to earn automatically with minimal risk.
                </div>
