--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div class="fast_block">
          <!-- <div class="container"> -->
             <div class="inside">
-               <marquee scrollamount="16">
+<!--                <marquee scrollamount="16"> -->
                   <div class="somet1">
                   <div class="somet">
                      <div class="pics">
@@ -129,7 +129,7 @@
                         -->
                   <!-- </div> -->
                </div>
-               </marquee>
+<!--                </marquee> -->
             </div>
          <!-- </div> -->
       </div>
