--- a/index.html
+++ b/index.html
@@ -45,91 +45,50 @@
              </div>
          </div>
       </div>
-      <div class="fast_block">
+    <div class="fast_block d-flex justify-content-center">
          <!-- <div class="container"> -->
             <div class="inside">
-<!--                <marquee scrollamount="16"> -->
-                  <div class="somet1">
-                  <div class="somet">
+               <!-- <marquee scrollamount="16"> -->
+                  <div class="somet1 row">
+                  <div class="somet col-4 col-lg-2">
                      <div class="pics">
                         <img class="some_img m-auto " src="./img/pers1.png" alt="">
-                        <div class="text_fast">Louis Ellis <span>+$640.0</span></div>
+                        <div class="text_fast">Louis Ellisen <span>+$640.0</span></div>
                      </div>
                   </div>
-                  <div class="somet">
+                  <div class="somet col-4 col-lg-2">
                      <div class="pics">
                         <img class="some_img m-auto" src="./img/pers2.png" alt="">
                         <div class="text_fast">Peggy Wolfe <span>+$424.0</span></div>
                      </div>
                   </div>
-                  <div class="somet">
+                  <div class="somet col-4 col-lg-2">
                      <div class="pics">
                         <img class="some_img m-auto" src="./img/pers3.png" alt="">
                         <div class="text_fast">Paul Santos <span>+$710.0</span></div>
                      </div>
                   </div>
-                  <div class="somet">
+                  <div class="somet col-4 col-lg-2">
                      <div class="pics">
                         <img class="some_img m-auto" src="./img/pers4.png" alt="">
                         <div class="text_fast">Carla Morris <span>+$403.0</span></div>
                      </div>
                   </div>
-                  <div class="somet">
+                  <div class="somet col-4 col-lg-2">
                      <div class="pics">
                         <img class="some_img m-auto" src="./img/pers5.png" alt="">
                         <div class="text_fast">Antonio Hall <span>+$890.0</span></div>
                      </div>
                   </div>
-                  <div class="">
+                  <div class="somet col-4 col-lg-2">
                      <div class="pics">
                         <img class="some_img m-auto" src="./img/pers6.png" alt="">
                         <div class="text_fast">Jessica Kim <span>+$690.0</span></div>
                      </div>
                   </div> -->
-                  <!-- <div class="row">
-                     <div class="col-1 col-lg-2">
-                        <div class="pics">
-                           <img class="some_img m-auto " src="./img/pers1.png" alt="">
-                           <div class="text_fast">Louis Ellis <span>+$640.0</span></div>
-                        </div>
-                     </div>
-                     <div class="col-1 col-lg-2">
-                        <div class="pics">
-                           <img class="some_img m-auto" src="./img/pers2.png" alt="">
-                           <div class="text_fast">Peggy Wolfe <span>+$424.0</span></div>
-                        </div>
-                     </div>
-                     <div class="col-1 col-lg-2">
-                        <div class="pics">
-                           <img class="some_img m-auto" src="./img/pers3.png" alt="">
-                           <div class="text_fast">Paul Santos <span>+$710.0</span></div>
-                        </div>
-                     </div>
-                     <div class="col-1 col-lg-2">
-                        <div class="pics">
-                           <img class="some_img m-auto" src="./img/pers4.png" alt="">
-                           <div class="text_fast">Carla Morris <span>+$403.0</span></div>
-                        </div>
-                     </div>
-                     <div class="col-1 col-lg-2">
-                        <div class="pics">
-                           <img class="some_img m-auto" src="./img/pers5.png" alt="">
-                           <div class="text_fast">Antonio Hall <span>+$890.0</span></div>
-                        </div>
-                     </div>
-                     <div class="col-1 col-lg-2">
-                        <div class="pics">
-                           <img class="some_img m-auto" src="./img/pers6.png" alt="">
-                           <div class="text_fast">Antonio Hall <span>+$890.0</span></div>
-                        </div>
-                     </div> -->
-                     <!-- <div clcol-1 ass="col-2 "><div class=""><img class="some_img" src="./img/pers7.png" alt=""><div class="text_fast">Antonio Hall <span>+$890.0</span></div></div></div>
-                        <div class="col-2 "><div class=""><img class="some_img" src="./img/pers8.png" alt=""><div class="text_fast">Antonio Hall <span>+$890.0</span></div></div></div>
-                        <div class="col-2 "><div class=""><img class="some_img" src="./img/pers9.png" alt=""><div class="text_fast">Antonio Hall <span>+$890.0</span></div></div></div>
-                        -->
-                  <!-- </div> -->
+                
                </div>
-<!--                </marquee> -->
+               <!-- </marquee> -->
             </div>
          <!-- </div> -->
       </div>
