--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                   <div class="somet col-4 col-lg-2">
                      <div class="pics">
                         <img class="some_img m-auto" src="./img/pers2.png" alt="">
-                        <div class="text_fast">Peggy Wolfe <span>+$424.0</span></div>
+                        <div class="text_fast">Peggy Wolf <span>+$424.0</span></div>
                      </div>
                   </div>
                   <div class="somet col-4 col-lg-2">
