--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
                   
                </div>
             </div>
-            <div class="col-12 d-flex justify-content-center main_video">
-                  <video width="700px" muted="muted" autoplay="autoplay" playsinline loop>
+<!--             col-12 d-flex justify-content-center -->
+            <div class=" main_video">
+                  <video width="400px" muted="muted" autoplay="autoplay" playsinline loop>
     <source src="./img/Cryptoapp_v1.webm"
             type="video/webm">
     <source src="./img/Cryptoapp_v1.mp4"
