--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@
       <div class="second_block">
          <div class="container">
             <div class="row">
-               <div class="col-12 col-lg-6 second_video d-flex justify-content-center">
+<!--                col-12 col-lg-6 -->
+               <div class="second_video d-flex justify-content-center">
 <!--                   <video width="700px" muted="muted" autoplay="autoplay"  loop src="./img/Cryptowallet.mp4"> </video> -->
                   <video width="700px" muted="muted" autoplay="autoplay" playsinline loop>
                      <!-- <source src="./img/Cryptowallet.webm"
