--- a/index.html
+++ b/index.html
@@ -109,10 +109,10 @@
          <div class="container">
             <div class="social_text">The platform has gained great popularity on various social networks. <br>Thousands of our users are excited to share their successes on YouTube, Twitter, Facebook etc.</div>
             <div class="row social d-flex justify-content-center">
-               <div class="col-2 d-flex justify-content-center"><img src="./img/facebook.png" alt=""></div>
-               <div class="col-2 d-flex justify-content-center"><img src="./img/youtube.png" alt=""></div>
-               <div class="col-2 d-flex justify-content-center"><img src="./img/twitter.png" alt=""></div>
-               <div class="col-2 d-flex justify-content-center"><img src="./img/insta.png" alt=""></div>
+               <div class="d-flex justify-content-center"><img src="./img/facebook.png" alt=""></div>
+               <div class="d-flex justify-content-center"><img src="./img/youtube.png" alt=""></div>
+               <div class="d-flex justify-content-center"><img src="./img/twitter.png" alt=""></div>
+               <div class="d-flex justify-content-center"><img src="./img/insta.png" alt=""></div>
             </div>
          </div>
       </div>
