--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                </div>
             </div>
 <!--             col-12 d-flex justify-content-center -->
-            <div class=" main_video">
+            <div class="main_video">
                   <video width="700px" muted="muted" autoplay="autoplay" playsinline loop>
     <source src="./img/Cryptoapp_v1.webm"
             type="video/webm">
@@ -109,10 +109,10 @@
          <div class="container">
             <div class="social_text">The platform has gained great popularity on various social networks. <br>Thousands of our users are excited to share their successes on YouTube, Twitter, Facebook etc.</div>
             <div class="row social d-flex justify-content-center">
-               <div class="d-flex justify-content-center"><img src="./img/facebook.png" alt=""></div>
-               <div class="d-flex justify-content-center"><img src="./img/youtube.png" alt=""></div>
-               <div class="d-flex justify-content-center"><img src="./img/twitter.png" alt=""></div>
-               <div class="d-flex justify-content-center"><img src="./img/insta.png" alt=""></div>
+               <div class="col-2"><img src="./img/facebook.png" alt=""></div>
+               <div class="col-2"><img src="./img/youtube.png" alt=""></div>
+               <div class="col-2"><img src="./img/twitter.png" alt=""></div>
+               <div class="col-2"><img src="./img/insta.png" alt=""></div>
             </div>
          </div>
       </div>
@@ -120,7 +120,7 @@
          <div class="container">
             <div class="row">
 <!--                col-12 col-lg-6 -->
-               <div class="second_video d-flex justify-content-center">
+               <div class="second_video">
 <!--                   <video width="700px" muted="muted" autoplay="autoplay"  loop src="./img/Cryptowallet.mp4"> </video> -->
                   <video width="700px" muted="muted" autoplay="autoplay" playsinline loop>
                      <!-- <source src="./img/Cryptowallet.webm"
