--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                </div>
             </div>
 <!--             col-12 d-flex justify-content-center -->
-            <div class="main_video">
+            <div class="col-12 main_video">
                   <video width="700px" muted="muted" autoplay="autoplay" playsinline loop>
     <source src="./img/Cryptoapp_v1.webm"
             type="video/webm">
