--- a/index.html
+++ b/index.html
@@ -118,8 +118,11 @@
       </div>
       <div class="second_block">
          <div class="container">
-            <div class="row">
+            <div class="row d-flex justify-content-center">
 <!--                col-12 col-lg-6 -->
+               <div class="col-12 col-lg-6 promo_text ">
+                  <b>Special trading algorithm</b>, taking into account many factors in the course of trading, which allows you to earn automatically with minimal risk.
+               </div>
                <div class="second_video">
 <!--                   <video width="700px" muted="muted" autoplay="autoplay"  loop src="./img/Cryptowallet.mp4"> </video> -->
                   <video width="700px" muted="muted" autoplay="autoplay" playsinline loop>
@@ -130,9 +133,7 @@
                      <source type="video/ogg" src="./img/Cryptowallet.ogg" />
                  </video>
                </div>
-               <div class="col-12 col-lg-6 promo_text ">
-                  <b>Special trading algorithm</b>, taking into account many factors in the course of trading, which allows you to earn automatically with minimal risk.
-               </div>
+               
             </div>
          </div>
       </div>
