--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
          <div class="container">
             <div class="row d-flex justify-content-center">
 <!--                col-12 col-lg-6 -->
-               <div class="col-12 col-lg-6 promo_text ">
+               <div class="promo_text ">
                   <b>Special trading algorithm</b>, taking into account many factors in the course of trading, which allows you to earn automatically with minimal risk.
                </div>
                <div class="second_video">
