--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                   <video width="700px" muted="muted" autoplay="autoplay" playsinline loop>
                      <!-- <source src="./img/Cryptowallet.webm"
                              type="video/webm"> -->
-                     <source src="./img/Cryptowallet.mp4"
+                     <source src="./img/Cryptowallet1.mp4"
                              type="video/mp4">
                      <source type="video/ogg" src="./img/Cryptowallet1.ogg" />
                  </video>
